# unik_proj

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/FaceEmbedding/: faceEmbedding.cpp  faceEmbedding.h
src/FaceRecognition/: faceRecognition.cpp  faceRecognition.h
src/ImageProcessing/: imageProcessing.cpp  imageProcessing.h
